--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -205,7 +205,7 @@
 				<div class="container">
 					<div class="row">
 							<div class="six columns"><p>Brought to you by <b>Andrea Cioni</b></p></div>
-							<div class="six columns" id="hostedby"><p>Hosted for free on <a href="https://www.000webhost.com/"><img height="16" src="images/000webhost_logo.png" /></a></p></div>
+							<div class="six columns" id="hostedby"><p>Hosted for free on <a href="https://www.heroku.com/"><img height="16" src="images/heroku_logo.png" /></a></p></div>
 							<div align="center" class="ten columns"><p><a href="https://github.com/andreacioni/KeeLink"><img height="50" src="images/github_logo.png" /></a></p></div>
 					</div>
 				</div>
