--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -136,20 +136,20 @@
 				<p><i>KeeLink has a very <b>simple and strong architecture</b>, it is composed mainly of two parts:</i></p>
 				<ul>
 					
-					<li>The Android one<ul>
+					<li>Android<ul>
 						<li>
 							KeeLink Android application acts as a bridge from Keepass2Android to this web page. Every credentials is retrieved
 							from the Keepass Database (KDBX). Once the credentials are received, the application waits for the user to scan QR code 
 							with its device camera. QR Code contains a simple URL as <i>ksid://yourpersonalanduniquesessionid</i>, so when the QR code 
 							is correctly parsed, the credentials are, firstly, encrypted with an <b>RSA 1024 bit</b> public key and then sent to a database and associated with <i>'yourpersonalanduniquesessionid'</i>. <b>No other information are sent 
-							over network</b>, <b>that is important for you</b> because it is essential for me to mantain your credentials as safe as possible. 
+							over network</b>, <b>that is important for you</b> because it is essential for me to maintain your credentials as safe as possible. 
 							More security for your credentials was added by the <b>HTTPS/SSL</b> protocol that is used for real transmission from your Android device to this site.
 						</li>
 					</ul></li>
-					<li>The PHP one<ul>
+					<li>WebApp<ul>
 						<li>
-							KeeLink PHP application acts only as a simple server that build a custom session ID, random generated, only for you. It is converted to 
-							QR Code and dispayed at the top of the page. Once QR is received your page starts querying database and listening for upcoming credentials.
+							KeeLink WebApp application acts only as a simple server that build a custom session ID, random generated, only for you. It is converted to 
+							QR Code and displayed at the top of the page. Once QR is received your page starts querying database and listening for upcoming credentials.
 							<b>When credentials are received, they will be deleted from database</b>.
 						</li>
 					</ul></li>
@@ -176,7 +176,7 @@
 					<ul>
 						<li><b>Web</b><ul>
 							<li>Skelethon - <a href="http://getskeleton.com/">http://getskeleton.com/</a></li>
-							<li>Font Awasome - <a href="http://fontawesome.io/">http://fontawesome.io/</a></li>
+							<li>Font Awesome - <a href="http://fontawesome.io/">http://fontawesome.io/</a></li>
 							<li>JQuery - <a href="http://jquery.com/">http://jquery.com/</a></li>
 							<li>QR JS library - <a href="https://davidshimjs.github.io/qrcodejs/">https://davidshimjs.github.io/qrcodejs/</a></li>
 							<li>JSencrypt - <a href="https://github.com/travist/jsencrypt">https://github.com/travist/jsencrypt</a></li>
@@ -205,10 +205,10 @@
 				<div class="container">
 					<div class="row">
 							<div class="six columns"><p>Brought to you by <b>Andrea Cioni</b></p></div>
-							<div class="six columns" id="hostedby"><p>Hosted for free on <a href="https://www.heroku.com/"><img height="16" src="images/heroku_logo.png" /></a></p></div>
-							<div align="center" class="ten columns"><p><a href="https://github.com/andreacioni/KeeLink"><img height="50" src="images/github_logo.png" /></a></p></div>
+							<div class="six columns"><p>Hosted for free on <a href="https://www.heroku.com/"><img height="25" src="images/heroku_logo.png" align="top" /></a></p></div>
+						</div>
+						<div class="row"></row><div align="center" class="twelve columns"><p><a href="https://github.com/andreacioni/KeeLink"><img height="50" src="images/github_logo.png" /></a></p></div></div>
 					</div>
-				</div>
 			</div>
 		</div>
 	</div>
