--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -26,13 +26,14 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/custom.css">
   <link rel="stylesheet" href="css/pace.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/ico" href="images/favicon.ico">
   
   <!-- JS LIBARY -->
+  <script src="https://kit.fontawesome.com/992540661e.js" crossorigin="anonymous"></script>
+  
   <script type="text/javascript" src="lib/pace/pace.js" data-pace-options='{ "ajax": false }'></script>
   <script type="text/javascript" src="lib/jsencrypt/jsencrypt.min.js"></script>
   <script type="text/javascript" src="lib/jquery/jquery.min.js"></script>
@@ -80,7 +81,10 @@
 				
 				<div class="row">
 					<div class="twelve columns" align="center">
-						<div id="qrcode_placeholder" hidden><img src="images/qr_code_loading.gif" height="250px"></div>
+						<div id="qrcode_placeholder" hidden>
+							<img src="images/qr_code_loading.gif" height="250px">
+							<div id="qr_code_overlay_icon" class="img-overlay-icon" hidden><a href="#"><i class="fas fa-sync-alt fa-5x"></i></a></div>
+						</div>
 						<div id="qrcode" hidden>
 						</div>
 					</div>
