changed "hosted for free" section

--- a/webapp/static/index.html
+++ b/webapp/static/index.html
@@ -221,7 +221,7 @@
 				<div class="container">
 					<div class="row">
 							<div class="six columns"><p>Brought to you by <b>Andrea Cioni</b></p></div>
-							<div class="six columns"><p>Hosted for free on <a href="https://www.heroku.com/"><img height="25" src="images/heroku_logo.png" align="top" /></a></p></div>
+							<div class="six columns"><p>Hosted for free on <a href="https://fly.io/"><img height="25" src="images/flyio_logo.png" align="top" /></a></p></div>
 						</div>
 						<div class="row"></row><div align="center" class="twelve columns"><p><a href="https://github.com/andreacioni/KeeLink"><img height="50" src="images/github_logo.png" /></a></p></div></div>
 					</div>
